// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LegacyPaidPaymentScreen should render with back button, title, help button, paid banner and notice code but no creditor tax id 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <RNCSafeAreaProvider
    onInsetsChange={[Function]}
    style={
      [
        {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        [
          {
            "backgroundColor": "#FFFFFF",
            "flex": 1,
          },
          undefined,
        ]
      }
    >
      <View
        collapsable={false}
        pointerEvents="box-none"
        style={
          {
            "zIndex": 1,
          }
        }
      >
        <View
          accessibilityElementsHidden={false}
          importantForAccessibility="auto"
          onLayout={[Function]}
          pointerEvents="box-none"
          style={null}
        >
          <View
            collapsable={false}
            pointerEvents="box-none"
            style={
              {
                "bottom": 0,
                "left": 0,
                "opacity": 1,
                "position": "absolute",
                "right": 0,
                "top": 0,
                "zIndex": 0,
              }
            }
          >
            <View
              collapsable={false}
              style={
                {
                  "backgroundColor": "#FFFFFF",
                  "borderBottomColor": "rgb(216, 216, 216)",
                  "flex": 1,
                  "shadowColor": "rgb(216, 216, 216)",
                  "shadowOffset": {
                    "height": 0.5,
                    "width": 0,
                  },
                  "shadowOpacity": 0.85,
                  "shadowRadius": 0,
                }
              }
            />
          </View>
          <View
            collapsable={false}
            pointerEvents="box-none"
            style={
              {
                "height": 44,
                "maxHeight": undefined,
                "minHeight": undefined,
                "opacity": undefined,
                "transform": undefined,
              }
            }
          >
            <View
              pointerEvents="none"
              style={
                {
                  "height": 0,
                }
              }
            />
            <View
              pointerEvents="box-none"
              style={
                {
                  "alignItems": "stretch",
                  "flex": 1,
                  "flexDirection": "row",
                }
              }
            >
              <View
                collapsable={false}
                pointerEvents="box-none"
                style={
                  {
                    "alignItems": "flex-start",
                    "flexBasis": 0,
                    "flexGrow": 1,
                    "justifyContent": "center",
                    "marginStart": 0,
                    "opacity": 1,
                  }
                }
              />
              <View
                collapsable={false}
                pointerEvents="box-none"
                style={
                  {
                    "justifyContent": "center",
                    "marginHorizontal": 16,
                    "maxWidth": 718,
                    "opacity": 1,
                  }
                }
              >
                <Text
                  accessibilityRole="header"
                  aria-level="1"
                  collapsable={false}
                  numberOfLines={1}
                  onLayout={[Function]}
                  style={
                    {
                      "color": "rgb(28, 28, 30)",
                      "fontSize": 17,
                      "fontWeight": "600",
                    }
                  }
                >
                  PN_CANCELLED_MESSAGE_PAID_PAYMENT
                </Text>
              </View>
              <View
                collapsable={false}
                pointerEvents="box-none"
                style={
                  {
                    "alignItems": "flex-end",
                    "flexBasis": 0,
                    "flexGrow": 1,
                    "justifyContent": "center",
                    "marginEnd": 0,
                    "opacity": 1,
                  }
                }
              />
            </View>
          </View>
        </View>
      </View>
      <RNSScreenContainer
        onLayout={[Function]}
        style={
          {
            "flex": 1,
          }
        }
      >
        <RNSScreen
          activityState={2}
          collapsable={false}
          gestureResponseDistance={
            {
              "bottom": -1,
              "end": -1,
              "start": -1,
              "top": -1,
            }
          }
          onGestureCancel={[Function]}
          pointerEvents="box-none"
          sheetAllowedDetents="large"
          sheetCornerRadius={-1}
          sheetExpandsWhenScrolledToEdge={true}
          sheetGrabberVisible={false}
          sheetLargestUndimmedDetent="all"
          style={
            {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <View
            collapsable={false}
            style={
              {
                "opacity": 1,
              }
            }
          />
          <View
            accessibilityElementsHidden={false}
            closing={false}
            gestureVelocityImpact={0.3}
            importantForAccessibility="auto"
            onClose={[Function]}
            onGestureBegin={[Function]}
            onGestureCanceled={[Function]}
            onGestureEnd={[Function]}
            onOpen={[Function]}
            onTransition={[Function]}
            pointerEvents="box-none"
            style={
              [
                {
                  "display": "flex",
                  "overflow": undefined,
                },
                {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
              ]
            }
            transitionSpec={
              {
                "close": {
                  "animation": "spring",
                  "config": {
                    "damping": 500,
                    "mass": 3,
                    "overshootClamping": true,
                    "restDisplacementThreshold": 10,
                    "restSpeedThreshold": 10,
                    "stiffness": 1000,
                  },
                },
                "open": {
                  "animation": "spring",
                  "config": {
                    "damping": 500,
                    "mass": 3,
                    "overshootClamping": true,
                    "restDisplacementThreshold": 10,
                    "restSpeedThreshold": 10,
                    "stiffness": 1000,
                  },
                },
              }
            }
          >
            <View
              collapsable={false}
              pointerEvents="box-none"
              style={
                {
                  "flex": 1,
                }
              }
            >
              <View
                collapsable={false}
                handlerTag={2}
                handlerType="PanGestureHandler"
                needsOffscreenAlphaCompositing={false}
                onGestureHandlerEvent={[Function]}
                onGestureHandlerStateChange={[Function]}
                style={
                  {
                    "flex": 1,
                    "transform": [
                      {
                        "translateX": 0,
                      },
                      {
                        "translateX": 0,
                      },
                    ],
                  }
                }
              >
                <View
                  pointerEvents="box-none"
                  style={
                    [
                      {
                        "flex": 1,
                        "overflow": "hidden",
                      },
                      [
                        {
                          "backgroundColor": "#FFFFFF",
                        },
                        undefined,
                      ],
                    ]
                  }
                >
                  <View
                    style={
                      {
                        "flex": 1,
                        "flexDirection": "column-reverse",
                      }
                    }
                  >
                    <View
                      style={
                        {
                          "flex": 1,
                        }
                      }
                    >
                      <View
                        style={
                          {
                            "flexGrow": 1,
                          }
                        }
                      >
                        <View
                          style={
                            {
                              "backgroundColor": "#FFFFFF",
                              "paddingHorizontal": 24,
                              "paddingTop": 0,
                            }
                          }
                        >
                          <View
                            style={
                              {
                                "alignItems": "center",
                                "flexDirection": "row",
                                "height": 56,
                              }
                            }
                          >
                            <View
                              style={
                                {
                                  "alignSelf": "center",
                                  "flex": 1,
                                }
                              }
                            >
                              <View
                                accessibilityLabel="Back"
                                accessibilityRole="button"
                                accessibilityState={
                                  {
                                    "busy": undefined,
                                    "checked": undefined,
                                    "disabled": false,
                                    "expanded": undefined,
                                    "selected": undefined,
                                  }
                                }
                                accessibilityValue={
                                  {
                                    "max": undefined,
                                    "min": undefined,
                                    "now": undefined,
                                    "text": undefined,
                                  }
                                }
                                accessible={true}
                                collapsable={false}
                                focusable={true}
                                hitSlop={8}
                                onBlur={[Function]}
                                onClick={[Function]}
                                onFocus={[Function]}
                                onResponderGrant={[Function]}
                                onResponderMove={[Function]}
                                onResponderRelease={[Function]}
                                onResponderTerminate={[Function]}
                                onResponderTerminationRequest={[Function]}
                                onStartShouldSetResponder={[Function]}
                                testID="back-button"
                              >
                                <View
                                  style={
                                    [
                                      {
                                        "height": 24,
                                        "width": 24,
                                      },
                                      {
                                        "alignItems": "center",
                                      },
                                      {
                                        "justifyContent": "center",
                                      },
                                      {
                                        "transform": [
                                          {
                                            "scale": undefined,
                                          },
                                        ],
                                      },
                                    ]
                                  }
                                >
                                  <RNSVGSvgView
                                    accessibilityElementsHidden={true}
                                    accessibilityLabel=""
                                    accessible={false}
                                    align="xMidYMid"
                                    animatedProps={
                                      {
                                        "color": undefined,
                                      }
                                    }
                                    bbHeight={24}
                                    bbWidth={24}
                                    focusable={false}
                                    height={24}
                                    importantForAccessibility="no-hide-descendants"
                                    meetOrSlice={0}
                                    minX={0}
                                    minY={0}
                                    style={
                                      [
                                        {
                                          "backgroundColor": "transparent",
                                          "borderWidth": 0,
                                        },
                                        {
                                          "color": "#0E0F13",
                                        },
                                        {
                                          "flex": 0,
                                          "height": 24,
                                          "width": 24,
                                        },
                                      ]
                                    }
                                    tintColor="#0E0F13"
                                    vbHeight={24}
                                    vbWidth={24}
                                    width={24}
                                  >
                                    <RNSVGGroup
                                      fill={
                                        {
                                          "payload": 4278190080,
                                          "type": 0,
                                        }
                                      }
                                    >
                                      <RNSVGPath
                                        clipRule={0}
                                        d="M12.7071.2929c-.3905-.39053-1.0237-.39053-1.4142 0l-11 11c-.39053.3905-.39053 1.0237 0 1.4142l11 11c.3905.3905 1.0237.3905 1.4142 0 .3905-.3905.3905-1.0237 0-1.4142L2.41421 12 12.7071 1.70711c.3905-.39053.3905-1.0237 0-1.41422Z"
                                        fill={
                                          {
                                            "type": 2,
                                          }
                                        }
                                        fillRule={0}
                                        propList={
                                          [
                                            "fill",
                                            "fillRule",
                                          ]
                                        }
                                      />
                                    </RNSVGGroup>
                                  </RNSVGSvgView>
                                </View>
                              </View>
                            </View>
                            <View
                              style={
                                {
                                  "alignItems": "center",
                                }
                              }
                            >
                              <View
                                accessible={true}
                              >
                                <Text
                                  accessibilityRole="header"
                                  accessible={true}
                                  color="bluegrey"
                                  defaultColor="bluegrey"
                                  defaultWeight="Regular"
                                  font="TitilliumSansPro"
                                  fontStyle={
                                    {
                                      "fontSize": 16,
                                      "lineHeight": 24,
                                    }
                                  }
                                  numberOfLines={1}
                                  style={
                                    [
                                      {
                                        "fontSize": 16,
                                        "lineHeight": 24,
                                      },
                                      {
                                        "color": "#475A6D",
                                        "fontFamily": "Titillium Sans Pro",
                                        "fontStyle": "normal",
                                        "fontWeight": "400",
                                      },
                                    ]
                                  }
                                  testID="bodyLabel"
                                  weight="Regular"
                                >
                                  Payment informations
                                </Text>
                              </View>
                            </View>
                            <View
                              style={
                                {
                                  "flex": 1,
                                  "flexDirection": "row",
                                  "justifyContent": "flex-end",
                                }
                              }
                            >
                              <View
                                style={
                                  {
                                    "width": 16,
                                  }
                                }
                              />
                            </View>
                          </View>
                        </View>
                        <RCTSafeAreaView
                          style={
                            {
                              "flex": 1,
                            }
                          }
                        >
                          <View
                            accessibilityRole="alert"
                            accessible={true}
                            style={
                              [
                                {
                                  "alignContent": "center",
                                  "alignItems": "flex-start",
                                  "flexDirection": "row",
                                  "paddingBottom": 8,
                                  "paddingLeft": 24,
                                  "paddingRight": 24,
                                  "paddingTop": 8,
                                  "width": "100%",
                                },
                                {
                                  "backgroundColor": "#00C5CA",
                                },
                              ]
                            }
                            testID="SectionStatusContent"
                          >
                            <View
                              style={
                                {
                                  "alignSelf": "center",
                                }
                              }
                            >
                              <RNSVGSvgView
                                accessibilityElementsHidden={true}
                                accessibilityLabel=""
                                accessible={false}
                                align="xMidYMid"
                                bbHeight={24}
                                bbWidth={24}
                                focusable={false}
                                height={24}
                                importantForAccessibility="no-hide-descendants"
                                meetOrSlice={0}
                                minX={0}
                                minY={0}
                                style={
                                  [
                                    {
                                      "backgroundColor": "transparent",
                                      "borderWidth": 0,
                                    },
                                    {
                                      "color": "#17324D",
                                    },
                                    {
                                      "flex": 0,
                                      "height": 24,
                                      "width": 24,
                                    },
                                  ]
                                }
                                tintColor="#17324D"
                                vbHeight={24}
                                vbWidth={24}
                                width={24}
                              >
                                <RNSVGGroup
                                  fill={
                                    {
                                      "payload": 4278190080,
                                      "type": 0,
                                    }
                                  }
                                >
                                  <RNSVGPath
                                    d="M17.752 8.22a1.083 1.083 0 0 0-1.531.028l-5.974 6.192-2.468-2.558-.093-.086a1.083 1.083 0 0 0-1.465 1.589l3.248 3.367.095.087c.43.352 1.068.322 1.463-.087l6.752-7 .083-.096c.328-.431.29-1.05-.11-1.435Z"
                                    fill={
                                      {
                                        "type": 2,
                                      }
                                    }
                                    propList={
                                      [
                                        "fill",
                                      ]
                                    }
                                  />
                                  <RNSVGPath
                                    clipRule={0}
                                    d="M12 0c6.627 0 12 5.373 12 12s-5.373 12-12 12S0 18.627 0 12 5.373 0 12 0Zm0 2C6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10S17.523 2 12 2Z"
                                    fill={
                                      {
                                        "type": 2,
                                      }
                                    }
                                    fillRule={0}
                                    propList={
                                      [
                                        "fill",
                                        "fillRule",
                                      ]
                                    }
                                  />
                                  <RNSVGPath
                                    d="M17.752 8.22a1.083 1.083 0 0 0-1.531.028l-5.974 6.192-2.468-2.558-.093-.086a1.083 1.083 0 0 0-1.465 1.589l3.248 3.367.095.087c.43.352 1.068.322 1.463-.087l6.752-7 .083-.096c.328-.431.29-1.05-.11-1.435Z"
                                    fill={
                                      {
                                        "type": 2,
                                      }
                                    }
                                    propList={
                                      [
                                        "fill",
                                      ]
                                    }
                                  />
                                  <RNSVGPath
                                    clipRule={0}
                                    d="M12 0c6.627 0 12 5.373 12 12s-5.373 12-12 12S0 18.627 0 12 5.373 0 12 0Zm0 2C6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10S17.523 2 12 2Z"
                                    fill={
                                      {
                                        "type": 2,
                                      }
                                    }
                                    fillRule={0}
                                    propList={
                                      [
                                        "fill",
                                        "fillRule",
                                      ]
                                    }
                                  />
                                </RNSVGGroup>
                              </RNSVGSvgView>
                            </View>
                            <Text
                              color="bluegreyDark"
                              defaultColor="blue"
                              defaultWeight="Bold"
                              font="TitilliumSansPro"
                              fontStyle={
                                {
                                  "fontSize": 16,
                                }
                              }
                              style={
                                [
                                  [
                                    {
                                      "flex": 1,
                                      "marginLeft": 16,
                                    },
                                    {
                                      "paddingVertical": 14,
                                    },
                                  ],
                                  {
                                    "fontSize": 16,
                                  },
                                  {
                                    "color": "#17324D",
                                    "fontFamily": "Titillium Sans Pro",
                                    "fontStyle": "normal",
                                    "fontWeight": "400",
                                  },
                                ]
                              }
                              weight="Regular"
                            >
                              <Text
                                color="bluegreyDark"
                                defaultColor="blue"
                                defaultWeight="Bold"
                                font="TitilliumSansPro"
                                fontStyle={
                                  {
                                    "fontSize": 14,
                                    "lineHeight": 21,
                                  }
                                }
                                style={
                                  [
                                    {
                                      "fontSize": 14,
                                      "lineHeight": 21,
                                    },
                                    {
                                      "color": "#17324D",
                                      "fontFamily": "Titillium Sans Pro",
                                      "fontStyle": "normal",
                                      "fontWeight": "400",
                                    },
                                  ]
                                }
                                weight="Regular"
                              >
                                This notice has been already paid!
                              </Text>
                            </Text>
                          </View>
                          <RCTScrollView
                            style={
                              {
                                "paddingHorizontal": 24,
                              }
                            }
                          >
                            <View>
                              <View
                                accessibilityLabel="Notice code"
                                accessibilityRole="button"
                                accessibilityState={
                                  {
                                    "busy": undefined,
                                    "checked": undefined,
                                    "disabled": undefined,
                                    "expanded": undefined,
                                    "selected": undefined,
                                  }
                                }
                                accessibilityValue={
                                  {
                                    "max": undefined,
                                    "min": undefined,
                                    "now": undefined,
                                    "text": undefined,
                                  }
                                }
                                accessible={true}
                                collapsable={false}
                                focusable={true}
                                onBlur={[Function]}
                                onClick={[Function]}
                                onFocus={[Function]}
                                onResponderGrant={[Function]}
                                onResponderMove={[Function]}
                                onResponderRelease={[Function]}
                                onResponderTerminate={[Function]}
                                onResponderTerminationRequest={[Function]}
                                onStartShouldSetResponder={[Function]}
                              >
                                <View
                                  importantForAccessibility="no-hide-descendants"
                                  style={
                                    [
                                      {
                                        "marginHorizontal": -24,
                                        "paddingHorizontal": 24,
                                        "paddingVertical": 12,
                                      },
                                      {
                                        "backgroundColor": undefined,
                                      },
                                    ]
                                  }
                                >
                                  <View
                                    style={
                                      [
                                        {
                                          "alignItems": "center",
                                          "flexDirection": "row",
                                          "justifyContent": "space-between",
                                        },
                                        {
                                          "transform": [
                                            {
                                              "scale": undefined,
                                            },
                                          ],
                                        },
                                      ]
                                    }
                                  >
                                    <View
                                      style={
                                        {
                                          "flex": 1,
                                        }
                                      }
                                    >
                                      <Text
                                        allowFontScaling={false}
                                        color="grey-700"
                                        defaultColor="blue"
                                        defaultWeight="Bold"
                                        font="TitilliumSansPro"
                                        fontStyle={
                                          {
                                            "fontSize": 14,
                                            "lineHeight": 21,
                                          }
                                        }
                                        style={
                                          [
                                            {
                                              "fontSize": 14,
                                              "lineHeight": 21,
                                            },
                                            {
                                              "color": "#555C70",
                                              "fontFamily": "Titillium Sans Pro",
                                              "fontStyle": "normal",
                                              "fontWeight": "400",
                                            },
                                          ]
                                        }
                                        weight="Regular"
                                      >
                                        Notice code
                                      </Text>
                                      <Text
                                        allowFontScaling={false}
                                        color="blue"
                                        defaultColor="black"
                                        defaultWeight="Semibold"
                                        font="TitilliumSansPro"
                                        fontStyle={
                                          {
                                            "fontSize": 18,
                                            "lineHeight": 25,
                                          }
                                        }
                                        numberOfLines={2}
                                        style={
                                          [
                                            {
                                              "fontSize": 18,
                                              "lineHeight": 25,
                                            },
                                            {
                                              "color": "#0073E6",
                                              "fontFamily": "Titillium Sans Pro",
                                              "fontStyle": "normal",
                                              "fontWeight": "600",
                                            },
                                          ]
                                        }
                                        weight="Semibold"
                                      >
                                        0180  1198  8086  4794  97
                                      </Text>
                                    </View>
                                    <View
                                      style={
                                        {
                                          "marginLeft": 12,
                                        }
                                      }
                                    >
                                      <RNSVGSvgView
                                        accessibilityElementsHidden={true}
                                        accessibilityLabel=""
                                        accessible={false}
                                        align="xMidYMid"
                                        bbHeight={24}
                                        bbWidth={24}
                                        focusable={false}
                                        height={24}
                                        importantForAccessibility="no-hide-descendants"
                                        meetOrSlice={0}
                                        minX={0}
                                        minY={0}
                                        style={
                                          [
                                            {
                                              "backgroundColor": "transparent",
                                              "borderWidth": 0,
                                            },
                                            {
                                              "color": "#0073E6",
                                            },
                                            {
                                              "flex": 0,
                                              "height": 24,
                                              "width": 24,
                                            },
                                          ]
                                        }
                                        tintColor="#0073E6"
                                        vbHeight={24}
                                        vbWidth={24}
                                        width={24}
                                      >
                                        <RNSVGGroup
                                          fill={
                                            {
                                              "payload": 4278190080,
                                              "type": 0,
                                            }
                                          }
                                        >
                                          <RNSVGPath
                                            clipRule={0}
                                            d="M12 18h8a2 2 0 0 0 2-2V9h-4a3 3 0 0 1-3-3V2h-3a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2Zm9.332-11.987a2 2 0 0 1 .603.987H18a1 1 0 0 1-1-1V2.227a2 2 0 0 1 .406.281l3.926 3.505ZM14 20h-2a4 4 0 0 1-4-4V6H4a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2Zm2 0h4a4 4 0 0 0 4-4V7.505a4 4 0 0 0-1.336-2.984l-3.926-3.505A4 4 0 0 0 16.074 0H12a4 4 0 0 0-4 4H4a4 4 0 0 0-4 4v12a4 4 0 0 0 4 4h8a4 4 0 0 0 4-4Z"
                                            fill={
                                              {
                                                "type": 2,
                                              }
                                            }
                                            fillRule={0}
                                            propList={
                                              [
                                                "fill",
                                                "fillRule",
                                              ]
                                            }
                                          />
                                        </RNSVGGroup>
                                      </RNSVGSvgView>
                                    </View>
                                  </View>
                                </View>
                              </View>
                            </View>
                          </RCTScrollView>
                        </RCTSafeAreaView>
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </RNSScreen>
      </RNSScreenContainer>
    </View>
  </RNCSafeAreaProvider>
</View>
`;

exports[`LegacyPaidPaymentScreen should render with back button, title, help button, paid banner, notice code and creditor tax id 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <RNCSafeAreaProvider
    onInsetsChange={[Function]}
    style={
      [
        {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        [
          {
            "backgroundColor": "#FFFFFF",
            "flex": 1,
          },
          undefined,
        ]
      }
    >
      <View
        collapsable={false}
        pointerEvents="box-none"
        style={
          {
            "zIndex": 1,
          }
        }
      >
        <View
          accessibilityElementsHidden={false}
          importantForAccessibility="auto"
          onLayout={[Function]}
          pointerEvents="box-none"
          style={null}
        >
          <View
            collapsable={false}
            pointerEvents="box-none"
            style={
              {
                "bottom": 0,
                "left": 0,
                "opacity": 1,
                "position": "absolute",
                "right": 0,
                "top": 0,
                "zIndex": 0,
              }
            }
          >
            <View
              collapsable={false}
              style={
                {
                  "backgroundColor": "#FFFFFF",
                  "borderBottomColor": "rgb(216, 216, 216)",
                  "flex": 1,
                  "shadowColor": "rgb(216, 216, 216)",
                  "shadowOffset": {
                    "height": 0.5,
                    "width": 0,
                  },
                  "shadowOpacity": 0.85,
                  "shadowRadius": 0,
                }
              }
            />
          </View>
          <View
            collapsable={false}
            pointerEvents="box-none"
            style={
              {
                "height": 44,
                "maxHeight": undefined,
                "minHeight": undefined,
                "opacity": undefined,
                "transform": undefined,
              }
            }
          >
            <View
              pointerEvents="none"
              style={
                {
                  "height": 0,
                }
              }
            />
            <View
              pointerEvents="box-none"
              style={
                {
                  "alignItems": "stretch",
                  "flex": 1,
                  "flexDirection": "row",
                }
              }
            >
              <View
                collapsable={false}
                pointerEvents="box-none"
                style={
                  {
                    "alignItems": "flex-start",
                    "flexBasis": 0,
                    "flexGrow": 1,
                    "justifyContent": "center",
                    "marginStart": 0,
                    "opacity": 1,
                  }
                }
              />
              <View
                collapsable={false}
                pointerEvents="box-none"
                style={
                  {
                    "justifyContent": "center",
                    "marginHorizontal": 16,
                    "maxWidth": 718,
                    "opacity": 1,
                  }
                }
              >
                <Text
                  accessibilityRole="header"
                  aria-level="1"
                  collapsable={false}
                  numberOfLines={1}
                  onLayout={[Function]}
                  style={
                    {
                      "color": "rgb(28, 28, 30)",
                      "fontSize": 17,
                      "fontWeight": "600",
                    }
                  }
                >
                  PN_CANCELLED_MESSAGE_PAID_PAYMENT
                </Text>
              </View>
              <View
                collapsable={false}
                pointerEvents="box-none"
                style={
                  {
                    "alignItems": "flex-end",
                    "flexBasis": 0,
                    "flexGrow": 1,
                    "justifyContent": "center",
                    "marginEnd": 0,
                    "opacity": 1,
                  }
                }
              />
            </View>
          </View>
        </View>
      </View>
      <RNSScreenContainer
        onLayout={[Function]}
        style={
          {
            "flex": 1,
          }
        }
      >
        <RNSScreen
          activityState={2}
          collapsable={false}
          gestureResponseDistance={
            {
              "bottom": -1,
              "end": -1,
              "start": -1,
              "top": -1,
            }
          }
          onGestureCancel={[Function]}
          pointerEvents="box-none"
          sheetAllowedDetents="large"
          sheetCornerRadius={-1}
          sheetExpandsWhenScrolledToEdge={true}
          sheetGrabberVisible={false}
          sheetLargestUndimmedDetent="all"
          style={
            {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <View
            collapsable={false}
            style={
              {
                "opacity": 1,
              }
            }
          />
          <View
            accessibilityElementsHidden={false}
            closing={false}
            gestureVelocityImpact={0.3}
            importantForAccessibility="auto"
            onClose={[Function]}
            onGestureBegin={[Function]}
            onGestureCanceled={[Function]}
            onGestureEnd={[Function]}
            onOpen={[Function]}
            onTransition={[Function]}
            pointerEvents="box-none"
            style={
              [
                {
                  "display": "flex",
                  "overflow": undefined,
                },
                {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
              ]
            }
            transitionSpec={
              {
                "close": {
                  "animation": "spring",
                  "config": {
                    "damping": 500,
                    "mass": 3,
                    "overshootClamping": true,
                    "restDisplacementThreshold": 10,
                    "restSpeedThreshold": 10,
                    "stiffness": 1000,
                  },
                },
                "open": {
                  "animation": "spring",
                  "config": {
                    "damping": 500,
                    "mass": 3,
                    "overshootClamping": true,
                    "restDisplacementThreshold": 10,
                    "restSpeedThreshold": 10,
                    "stiffness": 1000,
                  },
                },
              }
            }
          >
            <View
              collapsable={false}
              pointerEvents="box-none"
              style={
                {
                  "flex": 1,
                }
              }
            >
              <View
                collapsable={false}
                handlerTag={1}
                handlerType="PanGestureHandler"
                needsOffscreenAlphaCompositing={false}
                onGestureHandlerEvent={[Function]}
                onGestureHandlerStateChange={[Function]}
                style={
                  {
                    "flex": 1,
                    "transform": [
                      {
                        "translateX": 0,
                      },
                      {
                        "translateX": 0,
                      },
                    ],
                  }
                }
              >
                <View
                  pointerEvents="box-none"
                  style={
                    [
                      {
                        "flex": 1,
                        "overflow": "hidden",
                      },
                      [
                        {
                          "backgroundColor": "#FFFFFF",
                        },
                        undefined,
                      ],
                    ]
                  }
                >
                  <View
                    style={
                      {
                        "flex": 1,
                        "flexDirection": "column-reverse",
                      }
                    }
                  >
                    <View
                      style={
                        {
                          "flex": 1,
                        }
                      }
                    >
                      <View
                        style={
                          {
                            "flexGrow": 1,
                          }
                        }
                      >
                        <View
                          style={
                            {
                              "backgroundColor": "#FFFFFF",
                              "paddingHorizontal": 24,
                              "paddingTop": 0,
                            }
                          }
                        >
                          <View
                            style={
                              {
                                "alignItems": "center",
                                "flexDirection": "row",
                                "height": 56,
                              }
                            }
                          >
                            <View
                              style={
                                {
                                  "alignSelf": "center",
                                  "flex": 1,
                                }
                              }
                            >
                              <View
                                accessibilityLabel="Back"
                                accessibilityRole="button"
                                accessibilityState={
                                  {
                                    "busy": undefined,
                                    "checked": undefined,
                                    "disabled": false,
                                    "expanded": undefined,
                                    "selected": undefined,
                                  }
                                }
                                accessibilityValue={
                                  {
                                    "max": undefined,
                                    "min": undefined,
                                    "now": undefined,
                                    "text": undefined,
                                  }
                                }
                                accessible={true}
                                collapsable={false}
                                focusable={true}
                                hitSlop={8}
                                onBlur={[Function]}
                                onClick={[Function]}
                                onFocus={[Function]}
                                onResponderGrant={[Function]}
                                onResponderMove={[Function]}
                                onResponderRelease={[Function]}
                                onResponderTerminate={[Function]}
                                onResponderTerminationRequest={[Function]}
                                onStartShouldSetResponder={[Function]}
                                testID="back-button"
                              >
                                <View
                                  style={
                                    [
                                      {
                                        "height": 24,
                                        "width": 24,
                                      },
                                      {
                                        "alignItems": "center",
                                      },
                                      {
                                        "justifyContent": "center",
                                      },
                                      {
                                        "transform": [
                                          {
                                            "scale": undefined,
                                          },
                                        ],
                                      },
                                    ]
                                  }
                                >
                                  <RNSVGSvgView
                                    accessibilityElementsHidden={true}
                                    accessibilityLabel=""
                                    accessible={false}
                                    align="xMidYMid"
                                    animatedProps={
                                      {
                                        "color": undefined,
                                      }
                                    }
                                    bbHeight={24}
                                    bbWidth={24}
                                    focusable={false}
                                    height={24}
                                    importantForAccessibility="no-hide-descendants"
                                    meetOrSlice={0}
                                    minX={0}
                                    minY={0}
                                    style={
                                      [
                                        {
                                          "backgroundColor": "transparent",
                                          "borderWidth": 0,
                                        },
                                        {
                                          "color": "#0E0F13",
                                        },
                                        {
                                          "flex": 0,
                                          "height": 24,
                                          "width": 24,
                                        },
                                      ]
                                    }
                                    tintColor="#0E0F13"
                                    vbHeight={24}
                                    vbWidth={24}
                                    width={24}
                                  >
                                    <RNSVGGroup
                                      fill={
                                        {
                                          "payload": 4278190080,
                                          "type": 0,
                                        }
                                      }
                                    >
                                      <RNSVGPath
                                        clipRule={0}
                                        d="M12.7071.2929c-.3905-.39053-1.0237-.39053-1.4142 0l-11 11c-.39053.3905-.39053 1.0237 0 1.4142l11 11c.3905.3905 1.0237.3905 1.4142 0 .3905-.3905.3905-1.0237 0-1.4142L2.41421 12 12.7071 1.70711c.3905-.39053.3905-1.0237 0-1.41422Z"
                                        fill={
                                          {
                                            "type": 2,
                                          }
                                        }
                                        fillRule={0}
                                        propList={
                                          [
                                            "fill",
                                            "fillRule",
                                          ]
                                        }
                                      />
                                    </RNSVGGroup>
                                  </RNSVGSvgView>
                                </View>
                              </View>
                            </View>
                            <View
                              style={
                                {
                                  "alignItems": "center",
                                }
                              }
                            >
                              <View
                                accessible={true}
                              >
                                <Text
                                  accessibilityRole="header"
                                  accessible={true}
                                  color="bluegrey"
                                  defaultColor="bluegrey"
                                  defaultWeight="Regular"
                                  font="TitilliumSansPro"
                                  fontStyle={
                                    {
                                      "fontSize": 16,
                                      "lineHeight": 24,
                                    }
                                  }
                                  numberOfLines={1}
                                  style={
                                    [
                                      {
                                        "fontSize": 16,
                                        "lineHeight": 24,
                                      },
                                      {
                                        "color": "#475A6D",
                                        "fontFamily": "Titillium Sans Pro",
                                        "fontStyle": "normal",
                                        "fontWeight": "400",
                                      },
                                    ]
                                  }
                                  testID="bodyLabel"
                                  weight="Regular"
                                >
                                  Payment informations
                                </Text>
                              </View>
                            </View>
                            <View
                              style={
                                {
                                  "flex": 1,
                                  "flexDirection": "row",
                                  "justifyContent": "flex-end",
                                }
                              }
                            >
                              <View
                                style={
                                  {
                                    "width": 16,
                                  }
                                }
                              />
                            </View>
                          </View>
                        </View>
                        <RCTSafeAreaView
                          style={
                            {
                              "flex": 1,
                            }
                          }
                        >
                          <View
                            accessibilityRole="alert"
                            accessible={true}
                            style={
                              [
                                {
                                  "alignContent": "center",
                                  "alignItems": "flex-start",
                                  "flexDirection": "row",
                                  "paddingBottom": 8,
                                  "paddingLeft": 24,
                                  "paddingRight": 24,
                                  "paddingTop": 8,
                                  "width": "100%",
                                },
                                {
                                  "backgroundColor": "#00C5CA",
                                },
                              ]
                            }
                            testID="SectionStatusContent"
                          >
                            <View
                              style={
                                {
                                  "alignSelf": "center",
                                }
                              }
                            >
                              <RNSVGSvgView
                                accessibilityElementsHidden={true}
                                accessibilityLabel=""
                                accessible={false}
                                align="xMidYMid"
                                bbHeight={24}
                                bbWidth={24}
                                focusable={false}
                                height={24}
                                importantForAccessibility="no-hide-descendants"
                                meetOrSlice={0}
                                minX={0}
                                minY={0}
                                style={
                                  [
                                    {
                                      "backgroundColor": "transparent",
                                      "borderWidth": 0,
                                    },
                                    {
                                      "color": "#17324D",
                                    },
                                    {
                                      "flex": 0,
                                      "height": 24,
                                      "width": 24,
                                    },
                                  ]
                                }
                                tintColor="#17324D"
                                vbHeight={24}
                                vbWidth={24}
                                width={24}
                              >
                                <RNSVGGroup
                                  fill={
                                    {
                                      "payload": 4278190080,
                                      "type": 0,
                                    }
                                  }
                                >
                                  <RNSVGPath
                                    d="M17.752 8.22a1.083 1.083 0 0 0-1.531.028l-5.974 6.192-2.468-2.558-.093-.086a1.083 1.083 0 0 0-1.465 1.589l3.248 3.367.095.087c.43.352 1.068.322 1.463-.087l6.752-7 .083-.096c.328-.431.29-1.05-.11-1.435Z"
                                    fill={
                                      {
                                        "type": 2,
                                      }
                                    }
                                    propList={
                                      [
                                        "fill",
                                      ]
                                    }
                                  />
                                  <RNSVGPath
                                    clipRule={0}
                                    d="M12 0c6.627 0 12 5.373 12 12s-5.373 12-12 12S0 18.627 0 12 5.373 0 12 0Zm0 2C6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10S17.523 2 12 2Z"
                                    fill={
                                      {
                                        "type": 2,
                                      }
                                    }
                                    fillRule={0}
                                    propList={
                                      [
                                        "fill",
                                        "fillRule",
                                      ]
                                    }
                                  />
                                  <RNSVGPath
                                    d="M17.752 8.22a1.083 1.083 0 0 0-1.531.028l-5.974 6.192-2.468-2.558-.093-.086a1.083 1.083 0 0 0-1.465 1.589l3.248 3.367.095.087c.43.352 1.068.322 1.463-.087l6.752-7 .083-.096c.328-.431.29-1.05-.11-1.435Z"
                                    fill={
                                      {
                                        "type": 2,
                                      }
                                    }
                                    propList={
                                      [
                                        "fill",
                                      ]
                                    }
                                  />
                                  <RNSVGPath
                                    clipRule={0}
                                    d="M12 0c6.627 0 12 5.373 12 12s-5.373 12-12 12S0 18.627 0 12 5.373 0 12 0Zm0 2C6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10S17.523 2 12 2Z"
                                    fill={
                                      {
                                        "type": 2,
                                      }
                                    }
                                    fillRule={0}
                                    propList={
                                      [
                                        "fill",
                                        "fillRule",
                                      ]
                                    }
                                  />
                                </RNSVGGroup>
                              </RNSVGSvgView>
                            </View>
                            <Text
                              color="bluegreyDark"
                              defaultColor="blue"
                              defaultWeight="Bold"
                              font="TitilliumSansPro"
                              fontStyle={
                                {
                                  "fontSize": 16,
                                }
                              }
                              style={
                                [
                                  [
                                    {
                                      "flex": 1,
                                      "marginLeft": 16,
                                    },
                                    {
                                      "paddingVertical": 14,
                                    },
                                  ],
                                  {
                                    "fontSize": 16,
                                  },
                                  {
                                    "color": "#17324D",
                                    "fontFamily": "Titillium Sans Pro",
                                    "fontStyle": "normal",
                                    "fontWeight": "400",
                                  },
                                ]
                              }
                              weight="Regular"
                            >
                              <Text
                                color="bluegreyDark"
                                defaultColor="blue"
                                defaultWeight="Bold"
                                font="TitilliumSansPro"
                                fontStyle={
                                  {
                                    "fontSize": 14,
                                    "lineHeight": 21,
                                  }
                                }
                                style={
                                  [
                                    {
                                      "fontSize": 14,
                                      "lineHeight": 21,
                                    },
                                    {
                                      "color": "#17324D",
                                      "fontFamily": "Titillium Sans Pro",
                                      "fontStyle": "normal",
                                      "fontWeight": "400",
                                    },
                                  ]
                                }
                                weight="Regular"
                              >
                                This notice has been already paid!
                              </Text>
                            </Text>
                          </View>
                          <RCTScrollView
                            style={
                              {
                                "paddingHorizontal": 24,
                              }
                            }
                          >
                            <View>
                              <View
                                accessibilityLabel="Notice code"
                                accessibilityRole="button"
                                accessibilityState={
                                  {
                                    "busy": undefined,
                                    "checked": undefined,
                                    "disabled": undefined,
                                    "expanded": undefined,
                                    "selected": undefined,
                                  }
                                }
                                accessibilityValue={
                                  {
                                    "max": undefined,
                                    "min": undefined,
                                    "now": undefined,
                                    "text": undefined,
                                  }
                                }
                                accessible={true}
                                collapsable={false}
                                focusable={true}
                                onBlur={[Function]}
                                onClick={[Function]}
                                onFocus={[Function]}
                                onResponderGrant={[Function]}
                                onResponderMove={[Function]}
                                onResponderRelease={[Function]}
                                onResponderTerminate={[Function]}
                                onResponderTerminationRequest={[Function]}
                                onStartShouldSetResponder={[Function]}
                              >
                                <View
                                  importantForAccessibility="no-hide-descendants"
                                  style={
                                    [
                                      {
                                        "marginHorizontal": -24,
                                        "paddingHorizontal": 24,
                                        "paddingVertical": 12,
                                      },
                                      {
                                        "backgroundColor": undefined,
                                      },
                                    ]
                                  }
                                >
                                  <View
                                    style={
                                      [
                                        {
                                          "alignItems": "center",
                                          "flexDirection": "row",
                                          "justifyContent": "space-between",
                                        },
                                        {
                                          "transform": [
                                            {
                                              "scale": undefined,
                                            },
                                          ],
                                        },
                                      ]
                                    }
                                  >
                                    <View
                                      style={
                                        {
                                          "flex": 1,
                                        }
                                      }
                                    >
                                      <Text
                                        allowFontScaling={false}
                                        color="grey-700"
                                        defaultColor="blue"
                                        defaultWeight="Bold"
                                        font="TitilliumSansPro"
                                        fontStyle={
                                          {
                                            "fontSize": 14,
                                            "lineHeight": 21,
                                          }
                                        }
                                        style={
                                          [
                                            {
                                              "fontSize": 14,
                                              "lineHeight": 21,
                                            },
                                            {
                                              "color": "#555C70",
                                              "fontFamily": "Titillium Sans Pro",
                                              "fontStyle": "normal",
                                              "fontWeight": "400",
                                            },
                                          ]
                                        }
                                        weight="Regular"
                                      >
                                        Notice code
                                      </Text>
                                      <Text
                                        allowFontScaling={false}
                                        color="blue"
                                        defaultColor="black"
                                        defaultWeight="Semibold"
                                        font="TitilliumSansPro"
                                        fontStyle={
                                          {
                                            "fontSize": 18,
                                            "lineHeight": 25,
                                          }
                                        }
                                        numberOfLines={2}
                                        style={
                                          [
                                            {
                                              "fontSize": 18,
                                              "lineHeight": 25,
                                            },
                                            {
                                              "color": "#0073E6",
                                              "fontFamily": "Titillium Sans Pro",
                                              "fontStyle": "normal",
                                              "fontWeight": "600",
                                            },
                                          ]
                                        }
                                        weight="Semibold"
                                      >
                                        0180  1198  8086  4794  97
                                      </Text>
                                    </View>
                                    <View
                                      style={
                                        {
                                          "marginLeft": 12,
                                        }
                                      }
                                    >
                                      <RNSVGSvgView
                                        accessibilityElementsHidden={true}
                                        accessibilityLabel=""
                                        accessible={false}
                                        align="xMidYMid"
                                        bbHeight={24}
                                        bbWidth={24}
                                        focusable={false}
                                        height={24}
                                        importantForAccessibility="no-hide-descendants"
                                        meetOrSlice={0}
                                        minX={0}
                                        minY={0}
                                        style={
                                          [
                                            {
                                              "backgroundColor": "transparent",
                                              "borderWidth": 0,
                                            },
                                            {
                                              "color": "#0073E6",
                                            },
                                            {
                                              "flex": 0,
                                              "height": 24,
                                              "width": 24,
                                            },
                                          ]
                                        }
                                        tintColor="#0073E6"
                                        vbHeight={24}
                                        vbWidth={24}
                                        width={24}
                                      >
                                        <RNSVGGroup
                                          fill={
                                            {
                                              "payload": 4278190080,
                                              "type": 0,
                                            }
                                          }
                                        >
                                          <RNSVGPath
                                            clipRule={0}
                                            d="M12 18h8a2 2 0 0 0 2-2V9h-4a3 3 0 0 1-3-3V2h-3a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2Zm9.332-11.987a2 2 0 0 1 .603.987H18a1 1 0 0 1-1-1V2.227a2 2 0 0 1 .406.281l3.926 3.505ZM14 20h-2a4 4 0 0 1-4-4V6H4a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2Zm2 0h4a4 4 0 0 0 4-4V7.505a4 4 0 0 0-1.336-2.984l-3.926-3.505A4 4 0 0 0 16.074 0H12a4 4 0 0 0-4 4H4a4 4 0 0 0-4 4v12a4 4 0 0 0 4 4h8a4 4 0 0 0 4-4Z"
                                            fill={
                                              {
                                                "type": 2,
                                              }
                                            }
                                            fillRule={0}
                                            propList={
                                              [
                                                "fill",
                                                "fillRule",
                                              ]
                                            }
                                          />
                                        </RNSVGGroup>
                                      </RNSVGSvgView>
                                    </View>
                                  </View>
                                </View>
                              </View>
                              <View
                                accessibilityLabel="Payee Fiscal Code"
                                accessibilityRole="button"
                                accessibilityState={
                                  {
                                    "busy": undefined,
                                    "checked": undefined,
                                    "disabled": undefined,
                                    "expanded": undefined,
                                    "selected": undefined,
                                  }
                                }
                                accessibilityValue={
                                  {
                                    "max": undefined,
                                    "min": undefined,
                                    "now": undefined,
                                    "text": undefined,
                                  }
                                }
                                accessible={true}
                                collapsable={false}
                                focusable={true}
                                onBlur={[Function]}
                                onClick={[Function]}
                                onFocus={[Function]}
                                onResponderGrant={[Function]}
                                onResponderMove={[Function]}
                                onResponderRelease={[Function]}
                                onResponderTerminate={[Function]}
                                onResponderTerminationRequest={[Function]}
                                onStartShouldSetResponder={[Function]}
                              >
                                <View
                                  importantForAccessibility="no-hide-descendants"
                                  style={
                                    [
                                      {
                                        "marginHorizontal": -24,
                                        "paddingHorizontal": 24,
                                        "paddingVertical": 12,
                                      },
                                      {
                                        "backgroundColor": undefined,
                                      },
                                    ]
                                  }
                                >
                                  <View
                                    style={
                                      [
                                        {
                                          "alignItems": "center",
                                          "flexDirection": "row",
                                          "justifyContent": "space-between",
                                        },
                                        {
                                          "transform": [
                                            {
                                              "scale": undefined,
                                            },
                                          ],
                                        },
                                      ]
                                    }
                                  >
                                    <View
                                      style={
                                        {
                                          "flex": 1,
                                        }
                                      }
                                    >
                                      <Text
                                        allowFontScaling={false}
                                        color="grey-700"
                                        defaultColor="blue"
                                        defaultWeight="Bold"
                                        font="TitilliumSansPro"
                                        fontStyle={
                                          {
                                            "fontSize": 14,
                                            "lineHeight": 21,
                                          }
                                        }
                                        style={
                                          [
                                            {
                                              "fontSize": 14,
                                              "lineHeight": 21,
                                            },
                                            {
                                              "color": "#555C70",
                                              "fontFamily": "Titillium Sans Pro",
                                              "fontStyle": "normal",
                                              "fontWeight": "400",
                                            },
                                          ]
                                        }
                                        weight="Regular"
                                      >
                                        Payee Fiscal Code
                                      </Text>
                                      <Text
                                        allowFontScaling={false}
                                        color="blue"
                                        defaultColor="black"
                                        defaultWeight="Semibold"
                                        font="TitilliumSansPro"
                                        fontStyle={
                                          {
                                            "fontSize": 18,
                                            "lineHeight": 25,
                                          }
                                        }
                                        numberOfLines={2}
                                        style={
                                          [
                                            {
                                              "fontSize": 18,
                                              "lineHeight": 25,
                                            },
                                            {
                                              "color": "#0073E6",
                                              "fontFamily": "Titillium Sans Pro",
                                              "fontStyle": "normal",
                                              "fontWeight": "600",
                                            },
                                          ]
                                        }
                                        weight="Semibold"
                                      >
                                        00000000009
                                      </Text>
                                    </View>
                                    <View
                                      style={
                                        {
                                          "marginLeft": 12,
                                        }
                                      }
                                    >
                                      <RNSVGSvgView
                                        accessibilityElementsHidden={true}
                                        accessibilityLabel=""
                                        accessible={false}
                                        align="xMidYMid"
                                        bbHeight={24}
                                        bbWidth={24}
                                        focusable={false}
                                        height={24}
                                        importantForAccessibility="no-hide-descendants"
                                        meetOrSlice={0}
                                        minX={0}
                                        minY={0}
                                        style={
                                          [
                                            {
                                              "backgroundColor": "transparent",
                                              "borderWidth": 0,
                                            },
                                            {
                                              "color": "#0073E6",
                                            },
                                            {
                                              "flex": 0,
                                              "height": 24,
                                              "width": 24,
                                            },
                                          ]
                                        }
                                        tintColor="#0073E6"
                                        vbHeight={24}
                                        vbWidth={24}
                                        width={24}
                                      >
                                        <RNSVGGroup
                                          fill={
                                            {
                                              "payload": 4278190080,
                                              "type": 0,
                                            }
                                          }
                                        >
                                          <RNSVGPath
                                            clipRule={0}
                                            d="M12 18h8a2 2 0 0 0 2-2V9h-4a3 3 0 0 1-3-3V2h-3a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2Zm9.332-11.987a2 2 0 0 1 .603.987H18a1 1 0 0 1-1-1V2.227a2 2 0 0 1 .406.281l3.926 3.505ZM14 20h-2a4 4 0 0 1-4-4V6H4a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2Zm2 0h4a4 4 0 0 0 4-4V7.505a4 4 0 0 0-1.336-2.984l-3.926-3.505A4 4 0 0 0 16.074 0H12a4 4 0 0 0-4 4H4a4 4 0 0 0-4 4v12a4 4 0 0 0 4 4h8a4 4 0 0 0 4-4Z"
                                            fill={
                                              {
                                                "type": 2,
                                              }
                                            }
                                            fillRule={0}
                                            propList={
                                              [
                                                "fill",
                                                "fillRule",
                                              ]
                                            }
                                          />
                                        </RNSVGGroup>
                                      </RNSVGSvgView>
                                    </View>
                                  </View>
                                </View>
                              </View>
                            </View>
                          </RCTScrollView>
                        </RCTSafeAreaView>
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </RNSScreen>
      </RNSScreenContainer>
    </View>
  </RNCSafeAreaProvider>
</View>
`;
